# now-time

./: Cargo.toml  README.md  mise.toml
.cargo/: config.toml
docs/: CHANGELOG.md
examples/: basic_usage.rs
src/: errors.rs  lib.rs  snapshot.rs
tests/: integration_tests.rs
